--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
     <version>3.0.0</version>
     <scope>provided</scope>
 </dependency>
+<dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>2.41.2</version>
+</dependency>
 
     
   </dependencies>
